--- a/app/assets/stylesheets/massages.scss
+++ b/app/assets/stylesheets/massages.scss
@@ -102,7 +102,7 @@
         border: 2px solid #2E9AFE;
         background-color: #2E9AFE;
         color:white;
-        margin-left: 15px;
+        //margin-left: 10px;
         height: 5vh;
         width:80px;
       }
